myK8S/media/kavita/kavita-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kavita
  template:
    metadata:
      labels:
        app: kavita
    spec:
      containers:
        - name: kavita
          image: lscr.io/linuxserver/kavita:latest
          ports:
            - containerPort: 5000
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: kavita-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: media-downloads-pvc
