myK8S/media/kavita/kavita-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavita-svc
  namespace: media
spec:
  selector:
    app: kavita
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
